# Sweetfish

./: .gitignore  CMakeLists.txt  README.md  sweetfish.desktop
rpmbuild/: build.spec  make-rpm.sh  sweetfish.desktop
snap/: snapcraft.yaml
snap/gui/: sweetfish.desktop
src/: Sweetfish.cpp  Sweetfish.h
src/Mastodon/: CMakeLists.txt  Mastodon.cpp  Mastodon.h  MastodonAPI.cpp  MastodonAPI.h  MastodonUrl.h  MediaUpload.cpp  MediaUpload.h  Streamer.cpp  Streamer.h  TootData.cpp  TootData.h
src/Network/: CMakeLists.txt  Network.cpp  Network.h
src/Resources/icon/: icon.qrc
src/Resources/translation/: lang_ja_JP.ts
src/Resources/ui/: ui-icon.qrc
src/Setting/: CMakeLists.txt  Setting.cpp  Setting.h
src/Translations/: CMakeLists.txt  en_AU.ts  en_GB.ts  en_US.ts  sweetfish-en_AU.ts
src/UI/: CMakeLists.txt  ImageLabel.cpp  ImageLabel.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  TextLabel.cpp  TextLabel.h  TootContent.cpp  TootContent.h  TootInfo.cpp  TootInfo.h  UserInfoBox.cpp  UserInfoBox.h  VideoPlayer.cpp  VideoPlayer.h
